# SignSight

./: .gitignore  Makefile  README.md
src/: CMakeLists.txt  Makefile  SignSight.cpp
src/GUI/: CMakeLists.txt  Draw.cpp  Draw.hpp  GUI.cpp  GUI.hpp
src/ImageProcessing/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.hpp
src/Tools/: CMakeLists.txt  ImageSegmenter.cpp  Makefile
